# known-troll-list-webui

./: LICENSE  README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/data/: api_models.rs  local_models.rs
src-tauri/src/resources/: config.ini
src-tauri/src/utilities/: app.rs  data_manager.rs  file_manager.rs  redis_manager.rs
