[package]
name = "known-troll-list-webui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
juniper = "0.16.0"
tokio = { version = "1.37.0", features = ["full"] }
postgrest = "1.6.0"
configparser = "3.0.4"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"]}
chrono = { version = "0.4.37", features = ["serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
